Change scope names.

--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
             clientID: 'your_webapp_b2c_app_id',
             authority: "https://login.microsoftonline.com/tfp/your_b2c_ad.onmicrosoft.com/your_b2c_sign_in_policy",
 
-            b2cScopes: ["https://your_b2c_ad.onmicrosoft.com/dotnet_app_id_uri/read"],
+            b2cScopes: ["https://your_b2c_ad.onmicrosoft.com/dotnet_app_id_uri/demo.read"],
             webApi: 'https://localhost:44332/api/',
 
             b2cScopesNodeJS: ["https://your_b2c_ad.onmicrosoft.com/nodejs_app_id_uri/demo.read"],
             webApiNodeJS: 'http://localhost:5000/hello',
 			
-			b2cScopesCore: ["https://your_b2c_ad.onmicrosoft.com/dotnetcore_app_id_uri/read"],
+			b2cScopesCore: ["https://your_b2c_ad.onmicrosoft.com/dotnetcore_app_id_uri/demo.read"],
             webApiCore: 'http://localhost:50422/coreapi/',
         };
     </script>
